make sure overflowing item details don't touch

--- a/app/assets/stylesheets/elements/_items.scss
+++ b/app/assets/stylesheets/elements/_items.scss
@@ -197,7 +197,7 @@
   margin-bottom: $margin / 6;
 
   &:last-child {
-    margin-right: 0;
+    margin-right: $margin / 6;
 
     @media (max-width: #{map-get($media-min-widths, sm) - 1px}) {
       margin-bottom: 0;
